# CAMPUS-BANDHU

./: .env.example  .eslintrc.cjs  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  firebase.json  firestore.rules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/scripts/: create-admin.ts  seed-firebase.ts  seed.ts
apps/api/src/: app.ts  index.ts
apps/api/src/config/: database.ts  env.ts  firebase-admin.ts  logger.ts
apps/web/: Dockerfile  package-lock.json  package.json  providers.tsx  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/src/: providers.tsx
apps/web/types/: domain.ts
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: CampusAchievement.sol
contracts/scripts/: deploy.ts
contracts/test/: CampusAchievement.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: CampusAchievement.ts  index.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
firebase/: firestore.rules  storage.rules
infra/kubernetes/: ai.yaml  api.yaml  ingress.yaml  namespace.yaml  web.yaml
services/ai/: Dockerfile  package.json  pyproject.toml  requirements.txt
services/ai/app/: main.py
services/ai/app/api/: routes.py
services/ai/app/core/: settings.py
services/ai/app/schemas/: recommendations.py
services/ai/app/services/: copilot.py  embedder.py  recommender.py
(+137 files in other folders)
